7180557: InetAddress.getLocalHost throws UnknownHostException on java7u5 on OSX webbugs

Reviewed-by: chegar, dsamersoff